infrastructure/base/kubernetes-dashboard/kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-production
    flame.pawelmalak/type: application
    flame.pawelmalak/name: Kubernetes Dashboard
    flame.pawelmalak/url: https://example.com
    flame.pawelmalak/icon: https://cdn2.iconfinder.com/data/icons/mixd/512/20_kubernetes-512.png
  name: dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - "example.com"
    secretName: kubernetes-tls
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
